gccida/g2/find_free_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2648:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a1, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2686:46: error: use of undeclared identifier 'qty_0'
if ( ( *( ( _BYTE *)cfun + 425) & 1) != 0 && qty_0[v26].n_calls_crossed > 0 ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2695:7: error: use of undeclared identifier 'qty_0'
if ( !qty_0[v26].n_calls_crossed ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2741:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2751:7: error: use of undeclared identifier 'unk_952B74'
if ( &unk_952B74 == ( _UNKNOWN *)++v13 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2788:10: error: use of undeclared identifier 'unk_952B74'
while ( &unk_952B74 != ( _UNKNOWN *)v13 ); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2809:19: error: use of undeclared identifier 'qty_0'
n_calls_crossed = qty_0[v26].n_calls_crossed; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/local-alloc.c:2810:49: error: use of undeclared identifier 'qty_0'
if ( !n_calls_crossed || 4 * n_calls_crossed >= qty_0[v26].n_refs ) 
                                                ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_free_reg/src/obj/local-alloc.o] Error 1
